# sfpl

./: CMakeLists.txt  README.md
include/: plot_builder.hpp
sources/: error.hpp  font.cpp  image.cpp  image.hpp  libplot.cpp  libplot.hpp  opensans_regular.cpp  pixel.cpp  pixel.hpp  plot_builder.cpp  rasterizer.cpp  rasterizer.hpp  sfpl.cpp  sfpl.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  function_range.cpp  function_range.hpp  line_chart_builder.cpp  main.cpp  math_chart_builder.cpp
